Learning Circles class update

--- a/W_00/Intro to Python .ipynb
+++ b/W_00/Intro to Python .ipynb
@@ -75,6 +75,46 @@
     "\n",
     "**PyCharm Tip**: Use the integrated Terminal (View > Tool Windows > Terminal) for environment management.\n",
     "\n",
+    "\n",
+    "### 2.3 Anaconda Distribution\n",
+    "Anaconda is a powerful distribution for Python, especially for data science, offering a pre-configured environment with popular packages and the `conda` package manager.\n",
+    "\n",
+    "- **Install Anaconda**:\n",
+    "  - Download the Anaconda Individual Edition for macOS from [anaconda.com](https://www.anaconda.com/products/distribution).\n",
+    "  - Run the installer and follow the prompts (GUI or Terminal-based).\n",
+    "  - Verify installation:\n",
+    "    ```bash\n",
+    "    conda --version\n",
+    "    ```\n",
+    "- **Set Up Anaconda in PyCharm**:\n",
+    "  - Open PyCharm and go to File > Project > Python Interpreter > Add Interpreter.\n",
+    "  - Select **Conda Environment** > Existing Environment.\n",
+    "  - Locate the Anaconda environment (e.g., `/Users/username/anaconda3/bin/python` or `/Users/username/opt/anaconda3/bin/python`).\n",
+    "  - PyCharm will detect the Anaconda environment and its packages.\n",
+    "- **Manage Packages with `conda`**:\n",
+    "  - Activate the base environment:\n",
+    "    ```bash\n",
+    "    conda activate\n",
+    "    ```\n",
+    "  - Install packages:\n",
+    "    ```bash\n",
+    "    conda install numpy pandas matplotlib\n",
+    "    ```\n",
+    "  - Update `conda` and packages:\n",
+    "    ```bash\n",
+    "    conda update conda\n",
+    "    conda update --all\n",
+    "    ```\n",
+    "- **Create a New Conda Environment**:\n",
+    "  - In Terminal:\n",
+    "    ```bash\n",
+    "    conda create -n myenv python=3.11\n",
+    "    conda activate myenv\n",
+    "    ```\n",
+    "  - In PyCharm, select this environment as the interpreter.\n",
+    "\n",
+    "**Note**: Use `conda` for Anaconda environments and `pip` for virtual environments to avoid conflicts. PyCharm’s interpreter settings simplify package management for both.\n",
+    "\n",
     "---\n",
     "\n",
     "## Python Terminal (IPython/Jupyter in PyCharm)\n",
@@ -558,9 +598,11 @@
     "\n",
     "---\n",
     "\n",
-    "# Data Structures – Organizing Your Data\n",
+    "# Data Structures – Organizing Your Data,\n",
     "\n",
     "Data structures are like containers for your data. Python’s built-in structures are easy to use, and later you can build custom ones for specific needs. Let’s explore!\n",
+    "\n",
+    " **Objective**: Organize data efficiently.\n",
     "\n",
     "### 2.1 Primitive Types – The Basics\n",
     "\n",
@@ -614,6 +656,7 @@
     "- **Tuple**: Fixed data.\n",
     "- **Dictionary**: Fast key-based lookups.\n",
     "- **Set**: Unique items.\n",
+    "\n",
     "\n",
     "### 2.3 Custom Data Structures\n",
     "\n",
@@ -1535,7 +1578,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66e714b5",
+   "id": "6fa2e53d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16937bbd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "750baa98",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42f72237",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "523efe74",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93dd10ab",
    "metadata": {},
    "outputs": [],
    "source": []
