--- a/W_00/Intro to Python .ipynb
+++ b/W_00/Intro to Python .ipynb
@@ -623,9 +623,80 @@
     "print(name, type(name))  # Alex <class 'str'>\n",
     "```\n",
     "\n",
+    "Python has several **built-in data types** that you can use out of the box because they’re built into the language. From all the built-in types available, you’ll find that a few of them represent basic objects, such as numbers, strings and characters, bytes, and Boolean values.\n",
+    "\n",
+    "Note that the term **basic** (primitive) refers to objects that can represent data you typically find in real life, such as numbers and text. It doesn’t include **composite data types** (non-primitive), such as **lists**, **tuples**, **dictionaries**, and others.\n",
+    "\n",
+    "Primitive data types in Python are the most basic types of data. They are the building blocks for data manipulation in Python are typically immutable, meaning their value cannot change after they are created. Here are the main primitive data types in Python:\n",
+    "\n",
+    "```\n",
+    "Class \t     Basic Type\n",
+    "int \t     Integer numbers\n",
+    "float \t     Floating-point numbers\n",
+    "complex      Complex numbers\n",
+    "str \t     Strings and characters\n",
+    "bytes        Bytes\n",
+    "bytearray    Bytes\n",
+    "bool \t     Boolean values\n",
+    "\n",
+    "x = 10              # Integer\n",
+    "y = 10.5            # Float\n",
+    "is_active = True    # Boolean\n",
+    "name = \"Alice\"      # String\n",
+    "\n",
+    "print(type(x))      \n",
+    "print(type(y))     \n",
+    "print(type(is_active))  \n",
+    "print(type(name))   \n",
+    "\n",
+    "<class 'int'>\n",
+    "<class 'float'>\n",
+    "<class 'bool'>\n",
+    "<class 'str'>\n",
+    "```\n",
+    "\n",
+    "### Integers\n",
+    "\n",
+    "#### Integer Literals\n",
+    "\n",
+    "When you need to use integer numbers in your code, you’ll often use integer literals directly. Literals are constant values of built-in types spelled out literally, such as integers. Python provides a few different ways to create integer literals.\n",
+    "\n",
+    "```\n",
+    ">>> 1 + 3\n",
+    "4\n",
+    "```\n",
+    "\n",
+    "#### Integer Methods\n",
+    "\n",
+    "The built-in int type has a few methods that you can use in some situations. Here’s a quick summary of these methods:\n",
+    "\n",
+    "```\n",
+    "Method \t                Description\n",
+    ".as_integer_ratio() \tReturns a pair of integers whose ratio is equal to the original integer and has a positive denominator\n",
+    ".bit_count() \tReturns the number of ones in the binary representation of the absolute value of the integer\n",
+    ".bit_length() \tReturns the number of bits necessary to represent an integer in binary, excluding the sign and leading zeros\n",
+    ".from_bytes() \tReturns the integer represented by the given array of bytes\n",
+    ".to_bytes() \tReturns an array of bytes representing an integer\n",
+    ".is_integer() \tReturns True\n",
+    "```\n",
+    "\n",
+    "#### The Built-in int() Function\n",
+    "\n",
+    "The built-in int() function provides another way to create integer values using different representations. With no arguments, the function returns 0:\n",
+    "\n",
+    "```\n",
+    ">>> int()\n",
+    "0\n",
+    "```\n",
+    "\n",
     "### 2.2 Built-in Composite Types – Storing Collections\n",
     "\n",
     "These are Python’s built-in **mutable** or **immutable** collections for organizing multiple items:\n",
+    "\n",
+    "Non-primitive data types, also known as complex or composite data types, are data types that are derived from primitive data types. They can store multiple values or more complex structures of data. Unlike primitive types, non-primitive data types are mutable, meaning their contents can be changed.\n",
+    "\n",
+    "\n",
+    "Examples of Non-Primitive Data Types\n",
     "\n",
     "- **List (`list`)**: Ordered, mutable. Like a shopping list.\n",
     "  - Example: `fruits = [\"apple\", \"banana\"]`\n",
@@ -656,6 +727,42 @@
     "- **Tuple**: Fixed data.\n",
     "- **Dictionary**: Fast key-based lookups.\n",
     "- **Set**: Unique items.\n",
+    "\n",
+    "\n",
+    "### Dictionaries\n",
+    "\n",
+    "In Python, dictionaries (or dicts for short) are a central data structure. Dicts store an arbitrary number of objects, each identified by a unique dictionary key.\n",
+    "\n",
+    "Because dictionaries are so important, Python features a robust dictionary implementation that’s built directly into the **core language**: the dict **data type**.\n",
+    "\n",
+    "Dictionaries are also often called maps, hashmaps, lookup tables, or associative arrays. They allow for the efficient lookup, insertion, and deletion of any object associated with a given key.\n",
+    "\n",
+    "Phone books make a decent real-world analog for dictionary objects. They allow you to quickly retrieve the information (phone number) associated with a given key (a person’s name). Instead of having to read a phone book front to back to find someone’s number, you can jump more or less directly to a name and look up the associated information.\n",
+    "\n",
+    "This analogy breaks down somewhat when it comes to how the information is organized to allow for fast lookups. But the fundamental performance characteristics hold. Dictionaries allow you to quickly find the information associated with a given key.\n",
+    "\n",
+    "Dictionaries are one of the most important and frequently used data structures in computer science. \n",
+    "\n",
+    "[Learn more...](https://realpython.com/python-data-structures/#dict-your-go-to-dictionary)\n",
+    "\n",
+    "[Python Dict Methods](https://www.w3schools.com/python/python_dictionaries_methods.asp)\n",
+    "\n",
+    "```\n",
+    "Method \tDescription\n",
+    "clear()\tRemoves all the elements from the dictionary\n",
+    "copy()\tReturns a copy of the dictionary\n",
+    "fromkeys()\tReturns a dictionary with the specified keys and value\n",
+    "get()\tReturns the value of the specified key\n",
+    "items()\tReturns a list containing a tuple for each key value pair\n",
+    "keys()\tReturns a list containing the dictionary's keys\n",
+    "pop()\tRemoves the element with the specified key\n",
+    "popitem()\tRemoves the last inserted key-value pair\n",
+    "setdefault()\tReturns the value of the specified key. If the key does not exist: insert the key, with the specified value\n",
+    "update()\tUpdates the dictionary with the specified key-value pairs\n",
+    "values()\tReturns a list of all the values in the dictionary\n",
+    "```\n",
+    "\n",
+    "Note: Python includes a specialized **dict subclass** for example OrderedDict that is not a **built-in** part of the **core language** and must be **imported from** the collections **module** in the **standard library**.\n",
     "\n",
     "\n",
     "### 2.3 Custom Data Structures\n",
