--- a/W_00/Intro to Python .ipynb
+++ b/W_00/Intro to Python .ipynb
@@ -1052,6 +1052,15 @@
     "\n",
     "These functions are available without importing any modules in Python 3.12. For detailed descriptions, refer to the [Python documentation](https://docs.python.org/3.12/library/functions.html).\n",
     "\n",
+    "### Check out [map()]( https://realpython.com/python-map-function/#getting-started-with-pythons-map)\n",
+    "\n",
+    "- map() applies function to each item in iterable in a loop and returns a new iterator that yields transformed items on demand. function can be any Python function that takes a number of arguments equal to the number of iterables you pass to map()\n",
+    "\n",
+    "map(function, iterable[, iterable1, iterable2,..., iterableN])\n",
+    "\n",
+    "Note: The first argument to map() is a **function object**, which means that you need to pass a function **without calling it**. That is, without using a pair of parentheses.\n",
+    "\n",
+    "\n",
     "Below is a classification of Python 3.12's 69 built-in functions, organized into categories based on their primary functionality. The categories are designed to group functions by their typical use cases, such as type conversion, object manipulation, iteration, mathematical operations, and more. Each function is listed under one category, though some could arguably fit into multiple categories depending on context. \n",
     "\n",
     "\n",
