Learning Circles class update

--- a/W_00/Intro to Python .ipynb
+++ b/W_00/Intro to Python .ipynb
@@ -765,6 +765,40 @@
     "Note: Python includes a specialized **dict subclass** for example OrderedDict that is not a **built-in** part of the **core language** and must be **imported from** the collections **module** in the **standard library**.\n",
     "\n",
     "\n",
+    "# Python Built-in Iterables\n",
+    "\n",
+    "An **iterable** is any Python object capable of returning its elements one at a time, allowing it to be iterated over in a `for` loop or other iteration constructs (e.g., list comprehensions, `map()`, etc.). An iterable must implement the `__iter__` method, which returns an iterator, or support the sequence protocol with `__getitem__`. Common examples include sequences, collections, and objects that produce values lazily.\n",
+    "\n",
+    "## List of Built-in Iterables\n",
+    "\n",
+    "- **Lists** (`list`): Ordered, mutable collections of items.  \n",
+    "  Example: `[1, 2, 3]`\n",
+    "\n",
+    "- **Tuples** (`tuple`): Ordered, immutable collections of items.  \n",
+    "  Example: `(1, 2, 3)`\n",
+    "\n",
+    "- **Strings** (`str`): Ordered sequences of characters.  \n",
+    "  Example: `\"hello\"`\n",
+    "\n",
+    "- **Dictionaries** (`dict`): Collections of key-value pairs (iterates over keys by default).  \n",
+    "  Example: `{\"a\": 1, \"b\": 2}`\n",
+    "\n",
+    "- **Sets** (`set`): Unordered collections of unique items.  \n",
+    "  Example: `{1, 2, 3}`\n",
+    "\n",
+    "- **Frozen Sets** (`frozenset`): Immutable sets.  \n",
+    "  Example: `frozenset([1, 2, 3])`\n",
+    "\n",
+    "- **Ranges** (`range`): Immutable sequences of numbers, often used for looping.  \n",
+    "  Example: `range(10)`\n",
+    "\n",
+    "- **Bytes** (`bytes`): Immutable sequences of bytes.  \n",
+    "  Example: `b\"hello\"`\n",
+    "\n",
+    "- **Bytearrays** (`bytearray`): Mutable sequences of bytes.  \n",
+    "  Example: `bytearray(b\"hello\")`\n",
+    "\n",
+    "\n",
     "### 2.3 Custom Data Structures\n",
     "\n",
     "For specialized tasks, you can create your own structures:\n",
