Learning Circles class update adding -iterables list

--- a/W_00/Intro to Python .ipynb
+++ b/W_00/Intro to Python .ipynb
@@ -767,7 +767,7 @@
     "\n",
     "# Python Built-in Iterables\n",
     "\n",
-    "An **iterable** is any Python object capable of returning its elements one at a time, allowing it to be iterated over in a `for` loop or other iteration constructs (e.g., list comprehensions, `map()`, etc.). An iterable must implement the `__iter__` method, which returns an iterator, or support the sequence protocol with `__getitem__`. Common examples include sequences, collections, and objects that produce values lazily.\n",
+    "An **iterable** is any Python object capable of returning its elements one at a time, allowing it to be iterated over in a `for` loop or other iteration constructs (e.g., list comprehensions, `map()`, etc.). An iterable must implement the `__iter__` method, which returns an iterator, or support the sequence protocol with `__getitem__`. **Common examples include sequences, collections, and objects that produce values lazily.**\n",
     "\n",
     "## List of Built-in Iterables\n",
     "\n",
