PyLadies Class - updates

--- a/W_00/Intro to Python .ipynb
+++ b/W_00/Intro to Python .ipynb
@@ -1026,6 +1026,14 @@
     "- A header line which begins with a keyword and ends with a colon.\n",
     "- A body consisting of one or more Python statements, each indented the same amount — the Python style guide recommends 4 spaces — from the header line.\n",
     "\n",
+    "### The Python return Statement: Usage and Best Practices\n",
+    "\n",
+    "In Python, these kinds of named code blocks are known as functions because they always send a value back to the caller. The Python documentation defines a function as follows:\n",
+    "\n",
+    "Functions can return any Python object to the caller code.\n",
+    "\n",
+    "https://realpython.com/python-return-statement/\n",
+    "\n",
     "\n",
     "### 4.2 Functional Tools\n",
     "\n",
