Learning circles - Annex

--- a/W_00/Intro to Python .ipynb
+++ b/W_00/Intro to Python .ipynb
@@ -2639,12 +2639,203 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4276826b",
+   "cell_type": "markdown",
+   "id": "d465133f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "# Tutorial: Using sys.argv in Python\n",
+    "\n",
+    "The `sys.argv` module in Python allows you to access command-line arguments passed to a Python script. This tutorial covers the basics of `sys.argv`, its usage, and practical examples.\n",
+    "\n",
+    "## What is sys.argv?\n",
+    "\n",
+    "- `sys.argv` is a list in the `sys` module that contains the command-line arguments passed to a Python script.\n",
+    "- The first element, `sys.argv[0]`, is the name of the script itself.\n",
+    "- Subsequent elements (`sys.argv[1]`, `sys.argv[2]`, etc.) are the arguments provided when running the script from the command line.\n",
+    "\n",
+    "## Prerequisites\n",
+    "\n",
+    "- Basic understanding of Python.\n",
+    "- Python installed on your system.\n",
+    "- Access to a terminal or command prompt.\n",
+    "\n",
+    "## Step 1: Importing the sys Module\n",
+    "\n",
+    "To use `sys.argv`, you need to import the `sys` module:\n",
+    "\n",
+    "```python\n",
+    "import sys\n",
+    "```\n",
+    "\n",
+    "## Step 2: Accessing Command-Line Arguments\n",
+    "\n",
+    "The `sys.argv` list captures arguments passed when you run a Python script from the command line. For example:\n",
+    "\n",
+    "```python\n",
+    "# example.py\n",
+    "import sys\n",
+    "\n",
+    "print(\"Script name:\", sys.argv[0])\n",
+    "print(\"Arguments:\", sys.argv[1:])\n",
+    "```\n",
+    "\n",
+    "Run the script from the terminal:\n",
+    "\n",
+    "```bash\n",
+    "python example.py arg1 arg2\n",
+    "```\n",
+    "\n",
+    "**Output:**\n",
+    "\n",
+    "```\n",
+    "Script name: example.py\n",
+    "Arguments: ['arg1', 'arg2']\n",
+    "```\n",
+    "\n",
+    "- `sys.argv[0]` is `\"example.py\"` (the script name).\n",
+    "- `sys.argv[1]` is `\"arg1\"`.\n",
+    "- `sys.argv[2]` is `\"arg2\"`.\n",
+    "\n",
+    "## Step 3: Checking the Number of Arguments\n",
+    "\n",
+    "You can use `len(sys.argv)` to check how many arguments were passed, including the script name:\n",
+    "\n",
+    "```python\n",
+    "# check_args.py\n",
+    "import sys\n",
+    "\n",
+    "if len(sys.argv) == 1:\n",
+    "    print(\"No arguments provided.\")\n",
+    "else:\n",
+    "    print(f\"Received {len(sys.argv) - 1} argument(s): {sys.argv[1:]}\")\n",
+    "```\n",
+    "\n",
+    "Run it:\n",
+    "\n",
+    "```bash\n",
+    "python check_args.py test\n",
+    "```\n",
+    "\n",
+    "**Output:**\n",
+    "\n",
+    "```\n",
+    "Received 1 argument(s): ['test']\n",
+    "```\n",
+    "\n",
+    "Run without arguments:\n",
+    "\n",
+    "```bash\n",
+    "python check_args.py\n",
+    "```\n",
+    "\n",
+    "**Output:**\n",
+    "\n",
+    "```\n",
+    "No arguments provided.\n",
+    "```\n",
+    "\n",
+    "## Step 4: Practical Example – Simple Calculator\n",
+    "\n",
+    "Let’s create a script that takes two numbers as arguments and performs addition:\n",
+    "\n",
+    "```python\n",
+    "# calculator.py\n",
+    "import sys\n",
+    "\n",
+    "if len(sys.argv) != 3:\n",
+    "    print(\"Usage: python calculator.py <number1> <number2>\")\n",
+    "else:\n",
+    "    try:\n",
+    "        num1 = float(sys.argv[1])\n",
+    "        num2 = float(sys.argv[2])\n",
+    "        result = num1 + num2\n",
+    "        print(f\"{num1} + {num2} = {result}\")\n",
+    "    except ValueError:\n",
+    "        print(\"Please provide valid numbers.\")\n",
+    "```\n",
+    "\n",
+    "Run it:\n",
+    "\n",
+    "```bash\n",
+    "python calculator.py 5 3\n",
+    "```\n",
+    "\n",
+    "**Output:**\n",
+    "\n",
+    "```\n",
+    "5.0 + 3.0 = 8.0\n",
+    "```\n",
+    "\n",
+    "If invalid input is provided:\n",
+    "\n",
+    "```bash\n",
+    "python calculator.py 5 abc\n",
+    "```\n",
+    "\n",
+    "**Output:**\n",
+    "\n",
+    "```\n",
+    "Please provide valid numbers.\n",
+    "```\n",
+    "\n",
+    "## Step 5: Best Practices\n",
+    "\n",
+    "- **Validate Arguments**: Always check the number of arguments and their types to avoid errors.\n",
+    "- **Provide Usage Instructions**: If the script is used incorrectly, display a helpful message.\n",
+    "- **Handle Exceptions**: Use `try-except` blocks to manage invalid inputs gracefully.\n",
+    "- **Use argparse for Complex Scripts**: For scripts with many arguments or optional flags, consider the `argparse` module instead of `sys.argv`.\n",
+    "\n",
+    "## Step 6: Limitations of sys.argv\n",
+    "\n",
+    "- `sys.argv` treats all arguments as strings, so you need to convert them to other types (e.g., `int`, `float`) manually.\n",
+    "- It’s best for simple scripts. For advanced argument parsing (e.g., optional flags, default values), use `argparse`.\n",
+    "\n",
+    "## Additional Example: File Processing\n",
+    "\n",
+    "Here’s a script that reads a filename from the command line and counts its lines:\n",
+    "\n",
+    "```python\n",
+    "# line_count.py\n",
+    "import sys\n",
+    "\n",
+    "if len(sys.argv) != 2:\n",
+    "    print(\"Usage: python line_count.py <filename>\")\n",
+    "else:\n",
+    "    try:\n",
+    "        with open(sys.argv[1], 'r') as file:\n",
+    "            line_count = len(file.readlines())\n",
+    "            print(f\"The file '{sys.argv[1]}' has {line_count} lines.\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"File not found.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred: {e}\")\n",
+    "```\n",
+    "\n",
+    "Run it:\n",
+    "\n",
+    "```bash\n",
+    "python line_count.py sample.txt\n",
+    "```\n",
+    "\n",
+    "**Output (assuming `sample.txt` has 10 lines):**\n",
+    "\n",
+    "```\n",
+    "The file 'sample.txt' has 10 lines.\n",
+    "```\n",
+    "\n",
+    "## Conclusion\n",
+    "\n",
+    "The `sys.argv` module is a simple way to handle command-line arguments in Python. By following this tutorial, you can:\n",
+    "\n",
+    "- Access and process command-line inputs.\n",
+    "- Validate arguments and handle errors.\n",
+    "- Build practical scripts like calculators or file processors.\n",
+    "\n",
+    "For more complex argument handling, explore the `argparse` module. Happy coding!\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
